--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "i18next": "^19.3.4",
     "i18next-browser-languagedetector": "^4.0.2",
     "jquery": "^3.4.1",
+    "lightbox2": "^2.11.1",
+    "limarquee": "^1.0.9",
     "popper.js": "^1.16.1",
     "react": "^16.13.1",
     "react-baidu-maps": "^1.0.11",
