--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jquery": "^3.4.1",
     "lightbox2": "^2.11.1",
     "limarquee": "^1.0.9",
+    "lodash": "^4.17.15",
     "popper.js": "^1.16.1",
     "react": "^16.13.1",
     "react-baidu-maps": "^1.0.11",
