--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lightbox2": "^2.11.1",
     "limarquee": "^1.0.9",
     "lodash": "^4.17.15",
+    "moment": "^2.25.1",
     "popper.js": "^1.16.1",
     "qs": "^6.9.3",
     "react": "^16.13.1",
